# plainrussian

./: .gitignore  README.md  go to hike  pyproject.toml
api/: readabilityio.py  settings.py  tornading.py
api/textmetric/: LR.py  metric.py
api/textmetric/textsbygrade/1/: bianki_murav.txt  buratino.txt  gaidar_kamen.txt  (+2 more)
bot/: plainrussianbot.py
plainrussian.ru/: calculate.php  index.php
plainrussian.ru/css/: common.css
textmetric/: metric.py  metrics.csv  metrics.xlsx  plot.py
textmetric/texts/: adm_reg_minpri.txt  andreev_shlem.txt  astafiev_parun.txt  astafiev_soldier.txt  averchenko_nadkin.txt  bianki_lesdom.txt  bondarev_hot.txt  budget_exp.txt  gaidar_stone.txt  gov_bill2.txt  government_upk.txt  grigor_gutt.txt  korol_blind.txt  kuprin_alesya.txt  kuprin_braslet.txt  matrenin_dvor.txt  mintrans_news1.txt  naveki.txt  platonov_kotlovan.txt  rasputin_pozhar.txt  text_budget.txt  text_doch.txt  text_dvakap.txt  text_paust.txt  text_paust2.txt  text_tale.txt  text_wiki.txt  zwezda.txt
textmetric/textsbygrade/1/: text_barin.txt  text_fox.txt  tolstoy_lip.txt
textmetric/textsbygrade/10/: korolenko_deti.txt
textmetric/textsbygrade/11/: dovlatov_chemodan.txt  gorki_izergil.txt  rasputin_zhivi.txt  text_msterms.txt
textmetric/textsbygrade/15/: text_rglichnosti.txt
textmetric/textsbygrade/17/: fks.txt  gov_sudeb.txt  minec_polozh.txt  text_arctic.txt
textmetric/textsbygrade/4/: gaidar_countries.txt  ryb_kortik.txt  tolst_nikita.txt
textmetric/textsbygrade/6/: text_avenger.txt
textmetric/textsbygrade/8/: koll_stone.txt  sab_blad.txt  tolst_yun.txt
(+15 files in other folders)
