[tool.poetry]
name = "plainrussian"
version = "0.1.1"
description = "Applying Anglo-Saxon algos to estimate the readability of Russian texts."
authors = ["Your Name <you@example.com>"]
license = "CC0 1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django-environ = "^0.10.0"
html2text = "^2020.1.16"
pymongo = "^4.4.0"
readability-lxml = "^0.8.1"
requests = "^2.31.0"
tornado = "^6.3.2"
numpy = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
